--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,7 +13,7 @@
 
     <p>
         My Home Page -
-        <a href=":"https://ibar1730.com">
+        <a href="https://ibar1730.com">
             My Web Pages
         </a>
     </p>
@@ -77,4 +75,6 @@
         </li>
     </ul>
 
-</body></html>
+</body>
+
+</html>
