--- a/bacs200/02/inspire.html
+++ b/bacs200/02/inspire.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Michael Oher</h1>
-        <img src="https://www.fosterclub.com/sites/default/files/styles/bootstrap3_col12/public/blog-images/Michael.jpeg?itok=0hDegtEO>
+        <img src="https://www.fosterclub.com/sites/default/files/styles/bootstrap3_col12/public/blog-images/Michael.jpeg?itok=0hDegtEO">
         <p>
             What makes him a hero? Michael inspired many with his story coming up to the NFL. Coming up from the worse conditions, in the hood, people dying everyday, etc. Many upcoming athetles looked at him as an inspiration.
         </p>
