--- a/bacs200/Project/index.html
+++ b/bacs200/Project/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
 <div class="media">
-    <img src="images/banner.png" class="align-self-center mr-3" alt="...">
+    <img src="download.jpeg" class="align-self-center mr-3" alt="...">
 </div>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Contact Me </a>
@@ -39,10 +39,10 @@
 
 <nav id="side-menu">
     <ul>
-        <li><a href="https://www.facebook.com/angelcreations970/">Facebook</a></li>
-        <li><a href="https://www.instagram.com/angelcreations970/?hl=en">Instragram</a></li>
+        <li><a href="https://www.instagram.com/araceliibarra/?hl=en">Instragram-Araceli</a></li>
+        <li><a href="https://www.instagram.com/ese_martin/?hl=en">Instragram-Martin</a></li>
     </ul>
-    <a href="images/crystal.jpg" target="Creator">
+    <a href="Ibarra-Martin.jpg" target="Creator">
         <img src="images/crystal.jpg" width="300" alt="Hydro">
     </a><br>
     <p>Hi my name is Crystal. I am a colorado native. I am a athome mom with two little girls. Id love to help you all personilze any items that you use everyday </p>
