--- a/bacs200/Project/index.html
+++ b/bacs200/Project/index.html
@@ -45,4 +45,4 @@
     <a href="Ibarra-Martin.jpg" target="Creator">
         <img src="images/crystal.jpg" width="300" alt="Hydro">
     </a><br>
-    <p>Hi my name is Crystal. I am a colorado native. I am a athome mom with two little girls. Id love to help you all personilze any items that you use everyday </p>
+    <p>Hello everybody, hope all is well. If you're looking for great service and top of the notch deals for maintence, give us a direct message, and yes that's Martin in the football picture </p>
