--- a/bacs200/Project/index.html
+++ b/bacs200/Project/index.html
@@ -18,10 +18,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
   <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="tshirts.html">Tshirts <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="Work.html">Tshirts <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="cups.html">Cups</a>
+                <a class="nav-link" href="Jobs.html">Cups</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="home.html">Party Decorations</a>
