--- a/bacs200/Project/index.html
+++ b/bacs200/Project/index.html
@@ -21,13 +21,13 @@
                 <a class="nav-link" href="Work.html">Tshirts <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="Jobs.html">Cups</a>
+                <a class="nav-link" href="Jobs.html">Jobs</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="home.html">Party Decorations</a>
+                <a class="nav-link" href="Work.html">Work</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="holiday.html">Holiday<a />
+                <a class="nav-link" href="Workinfo.html">WorkInfo<a />
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="contact.html" tabindex="-1" aria-disabled="true">Contact</a>
