--- a/bacs200/Project/index.html
+++ b/bacs200/Project/index.html
@@ -18,7 +18,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
   <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="Work.html">Tshirts <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="Location.html">Location<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="Jobs.html">Jobs</a>
@@ -45,4 +45,4 @@
     <a href="Ibarra-Martin.jpg" target="Creator">
         <img src="images/crystal.jpg" width="300" alt="Hydro">
     </a><br>
-    <p>Hello everybody, hope all is well. If you're looking for great service and top of the notch deals for maintence, give us a direct message, and yes that's Martin in the football picture </p>
+    <p>Hello everybody, hope all is well. If you're looking for great service and top of the notch deals for maintence, give us a direct message, and yes that's Martin in the football picture. Go Bears! </p>
